common-applications/freesky-icsl-hk-cluster/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  tls:
    - hosts:
        - build-02.test.osinfra.cn
      secretName: argocd-server-tls
  rules:
  - host: build-02.test.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  ingressClassName: nginx
